<resources>
    <string name="app_name">Weather</string>
    <string name="api_key">ba437a3970b9dd31a8949eb1511b13cc</string>
    <string name="web_service_url_city">http://api.openweathermap.org/data/2.5/forecast/daily?q=</string>
    <string name="web_service_url">http://api.openweathermap.org/data/2.5/forecast/daily?</string>
<string name="invalid_url">Invalid URL</string>
    <string name="weather_condition_image">A graphical representation of the weather conditions</string>
    <string name="high_temp">High: %s</string>
    <string name="low_temp">Low: %s</string>
    <string name="morning_temp">Morning: %s</string>
    <string name="evening_temp">Evening: %s</string>
    <string name="night_temp">Night: %s</string>
    <string name="day_description">%1$s: %2$s</string>
    <string name="humidity">Humidity: %s</string>
    <string name="cloudiness">Cloudiness: %s</string>
    <string name="wind">Wind: %s</string>
    <string name="pressure">Pressure: %s</string>
    <string name="preference_file_key">com.example.muffin.weather.weather_shared_preferences</string>
    <string name="hint_text">Enter city (e.g, Boston, MA, US)</string>
    <string name="read_error">Unable to read weather data</string>
    <string name="connect_error">Unable to connect to OpenWeatherMap.org</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="weather">weather</string>
    <string name="count_of_days_hint">Count of days(1–15)</string>
    <string name="temp_units">Temperature units</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="find_location">Find location</string>
    <string name="pref_countOfDays">pref_countOfDays</string>
    <string name="pref_temp_units">pref_temp_units</string>

    <string name="location_error">Can`t find location!</string>
    <string name="days_count_error">Days count must be from 1 to 15!</string>


</resources>
