<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/conditionImageView"
        android:layout_width="@dimen/image_side_length"
        android:layout_height="@dimen/image_side_length"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/weather_condition_image"
        android:scaleType="fitCenter"
        app:srcCompat="@mipmap/ic_launcher" />

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        app:columnCount="3"
        app:rowCount="4"
        android:layout_height="match_parent"
        app:useDefaultMargins="true">

        <TextView
            android:text="Large text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_column="0"
            app:layout_row="0"
            app:layout_columnSpan="3"
            android:id="@+id/dayTextView" />


        <TextView
            android:hint="@string/low_temp"
            android:layout_width="wrap_content"
            app:layout_columnWeight="1"
            app:layout_column="0"
            app:layout_row="1"
            android:layout_height="wrap_content"
            android:id="@+id/lowTextView"
            />

        <TextView
            android:hint="@string/high_temp"
            android:layout_width="wrap_content"
            app:layout_columnWeight="1"
            app:layout_column="1"
            app:layout_row="1"
            android:layout_height="wrap_content"
            android:id="@+id/hightTextView"
            />

        <TextView
            android:hint="@string/humidity"
            android:layout_width="wrap_content"
            app:layout_columnWeight="1"
            app:layout_column="2"
            app:layout_row="1"
            android:layout_height="wrap_content"
            android:id="@+id/humidityTextView"
            />
        <TextView
            android:hint="@string/morning_temp"
            android:layout_width="wrap_content"
            app:layout_columnWeight="1"
            app:layout_column="0"
            app:layout_row="2"
            android:layout_height="wrap_content"
            android:id="@+id/mornTextView"
            />

        <TextView
            android:hint="@string/evening_temp"
            android:layout_width="wrap_content"
            app:layout_columnWeight="1"
            app:layout_column="1"
            app:layout_row="2"
            android:layout_height="wrap_content"
            android:id="@+id/eveningTextView"
            />

        <TextView
            android:hint="@string/night_temp"
            android:layout_width="wrap_content"
            app:layout_columnWeight="1"
            app:layout_column="2"
            app:layout_row="2"
            android:layout_height="wrap_content"
            android:id="@+id/nightTextView"
            />

        <TextView
            android:hint="@string/wind"
            android:layout_width="wrap_content"
            app:layout_columnWeight="1"
            app:layout_column="0"
            app:layout_row="3"
            android:layout_height="wrap_content"
            android:id="@+id/windTextView"
            />

        <TextView
            android:hint="@string/pressure"
            android:layout_width="wrap_content"
            app:layout_columnWeight="1"
            app:layout_column="1"
            app:layout_row="3"
            android:layout_height="wrap_content"
            android:id="@+id/pressureTextView"
            />

    </android.support.v7.widget.GridLayout>

</LinearLayout>